# NDKDemo

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xzl/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  log.h  native-lib.cpp  readAssetFile.cpp
app/src/main/cpp/include/: test.h
app/src/main/java/com/xzl/ndkdemo/: MainActivity.java
app/src/test/java/com/xzl/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/xzl/nativelib/: ExampleInstrumentedTest.java
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.cpp
nativelib/src/main/java/com/xzl/nativelib/: MainActivity.java
nativelib/src/test/java/com/xzl/nativelib/: ExampleUnitTest.java
